# neosu

./: .clang-format  .clangd-template  .git-blame-ignore-revs  .gitignore  Makefile.am  README.md  autogen.sh  bump_version.sh  configure.ac
.github/workflows/: linux-aarch64.yaml  linux-multiarch.yml  web-wasm32.yml  win-multiarch.yml
.github/workflows/docker/: build.sh
assets/: binary_embed.manifest  neosu.manifest  resource.rc
assets/binary/: dx_shaders_embed.manifest  gl_shaders_embed.manifest  misc_embed.manifest
assets/misc/: convar_template.html
assets/shaders/: DX11_cursortrail_v.hlsl  DX11_default_v.hlsl  DX11_flashlight_v.hlsl  DX11_smoothclip_f.hlsl  GL_actual_flashlight_f.glsl  GL_actual_flashlight_v.glsl  GL_cursortrail_f.glsl  GL_cursortrail_v.glsl  GL_flashlight_f.glsl  GL_slider_f.glsl  GL_slider_v.glsl  GL_smoothclip_f.glsl  GL_smoothclip_v.glsl  SDLGPU_actual_flashlight_f.hlsl  SDLGPU_actual_flashlight_v.hlsl  SDLGPU_cursortrail_f.hlsl  SDLGPU_cursortrail_v.hlsl  SDLGPU_default_f.glsl  SDLGPU_default_f.hlsl  SDLGPU_flashlight_f.hlsl  SDLGPU_slider_f.hlsl  SDLGPU_slider_v.hlsl  SDLGPU_smoothclip_f.hlsl  SDLGPU_smoothclip_v.hlsl  actual_flashlight_f.hlsl  cursortrail_f.hlsl  default_f.hlsl  default_v.hlsl  flashlight_f.hlsl  slider_f.hlsl  slider_v.hlsl  smoothclip_v.hlsl
build-aux/: gen_binary_embed.py  pack_sdlgpu_shader.py
build-aux/misc/: 0001-libmpg123-initial-support-for-VBRI-tag-parsing.patch  SDL3-PR14048-emscripten-clipboard.patch  SDL3-Use-RIDEV_NOLEGACY-for-Windows-raw-mouse-input.patch  SDL3-WIP-gpu_vulkan-Address-more-defragmentation-related-.patch  SDL3-emscripten-dummyaudio.patch  SDL3-gpu_vulkan-Set-texture-container-before-transitionin.patch  SoundTouch-AVX-patches.patch
cmake-win/: CMakeLists.txt  build-win64-wine.sh  build_timestamp.h.in  buildwin64.bat  config.h.in  dependencies.cmake  patch_mpg123.cmake  patch_nsync.cmake
cmake-win/src/: CMakeLists.txt
libraries/: MD5.h  clay.h  clay_implementation.cpp  demoji.cpp  demoji.h  stb_image.h
libraries/delegatesv2/: Delegate.h  DelegateBase.h  MultiCastDelegate.h
libraries/glad/: glad_egl.cpp  glad_egl.h  glad_gl.cpp  glad_gl.h
libraries/glad/EGL/: eglplatform.h
src/: Makefile.sources  build_timestamp.h.in  pch.h
src/App/: App.cpp  App.h  AppDescriptor.h  AppRegistry.cpp  AppRunner.cpp  AppRunner.h
src/App/Osu/: AbstractBeatmapInterface.cpp  AbstractBeatmapInterface.h  AppEnvInterop.cpp  AvatarManager.cpp  AvatarManager.h  BackgroundImageHandler.cpp  BackgroundImageHandler.h  Bancho.cpp  Bancho.h  BanchoAes.cpp  BanchoApi.cpp  BanchoApi.h  BanchoLeaderboard.cpp  BanchoLeaderboard.h  BanchoNetworking.cpp  BanchoNetworking.h  BanchoPacket.cpp  BanchoPacket.h  BanchoProtocol.cpp  BanchoProtocol.h  BanchoReader.cpp  BanchoReader.h  BanchoSubmitter.cpp  BanchoUsers.cpp  BanchoUsers.h  Beatmap.cpp  BeatmapInterface.cpp  BeatmapInterface.h  Changelog.cpp  Changelog.h  Chat.cpp  Chat.h  ChatLink.cpp  ChatLink.h  Collections.cpp  Collections.h  Database.cpp  Database.h  DatabaseBeatmap.cpp  DatabaseBeatmap.h  (+139 more)
src/App/Tests/: TestApps.h  TestRunner.cpp  TestRunner.h
src/Binary/: curl_blob.cpp  curl_blob.h  incbin.h  misc_bin.cpp  misc_bin.h  shaders.cpp  shaders.h
src/Engine/: AnimationHandler.cpp  AnimationHandler.h  Archival.cpp  Archival.h  AsyncIOHandler.cpp  AsyncIOHandler.h  ByteBufferedFile.cpp  ByteBufferedFile.h  Camera.cpp  ConVar.cpp  ConVar.h  ConVarDefs.h  Console.cpp  Console.h  DirectoryWatcher.cpp  DirectoryWatcher.h  DiscordInterface.cpp  DiscordInterface.h  Engine.cpp  Engine.h  EngineConfig.h  Environment.cpp  Environment.h  FPSLimiter.cpp  FPSLimiter.h  File.cpp  File.h  Font.cpp  Font.h  Image.cpp  Image.h  InputDevice.h  Logging.cpp  Logging.h  NetworkHandler.cpp  NetworkHandler.h  NetworkHandler_wasm.cpp  Profiler.cpp  Profiler.h  SysMon.cpp  (+7 more)
src/Engine/ConVars/: ConVar.cpp  ConVar.h  ConVarDefs.h  ConVarHandler.cpp  ConVarHandler.h  Console.cpp  Console.h
src/Engine/File/: AsyncIOHandler.cpp  AsyncIOHandler.h  ByteBufferedFile.cpp  ByteBufferedFile.h  DirectoryWatcher.cpp  DirectoryWatcher.h  File.cpp  File.h
src/Engine/Input/: Cursors.h  KeyBindings.cpp  KeyBindings.h  Keyboard.cpp  Keyboard.h  KeyboardEvent.h  KeyboardListener.h  Mouse.cpp  Mouse.h  MouseListener.h
src/Engine/Renderer/: Camera.h  Graphics.cpp  Graphics.h  NullGraphics.cpp  NullGraphics.h  RenderTarget.cpp  RenderTarget.h  Shader.cpp  Shader.h  VertexArrayObject.cpp  VertexArrayObject.h
src/Engine/Resources/: AsyncResourceLoader.cpp  AsyncResourceLoader.h  Font.cpp  Font.h  FontTypeMap.h  Image.cpp  Image.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  TextureAtlas.cpp  TextureAtlas.h
src/GUI/: CBaseUIButton.cpp  CBaseUIButton.h  CBaseUICheckbox.cpp  CBaseUICheckbox.h  CBaseUIContainer.cpp  CBaseUIContainer.h  CBaseUIElement.cpp  CBaseUIElement.h  CBaseUIImage.cpp  CBaseUIImage.h  CBaseUIImageButton.cpp  CBaseUIImageButton.h  CBaseUILabel.cpp  CBaseUILabel.h  CBaseUIScrollView.cpp  CBaseUIScrollView.h  CBaseUISlider.cpp  CBaseUISlider.h  CBaseUITextField.cpp  CBaseUITextField.h  CBaseUITextbox.cpp  CBaseUITextbox.h  CBaseUIWindow.cpp  CBaseUIWindow.h  CWindowManager.cpp  CWindowManager.h
src/Platform/: BaseEnvironment.h  CrashHandler.cpp  CrashHandler.h  Environment.cpp  Environment.h  EnvironmentInterop.h  GPUDriverConfigurator.cpp  GPUDriverConfigurator.h  RuntimePlatform.cpp  RuntimePlatform.h  WinDebloatDefs.h  environment_private.h  main.cpp  main_impl.cpp  main_impl.h  sigsetjmp-aarch64-curl-workaround.cpp  wasm-node-polyfill.js
src/Tools/: DiffCalcTool.cpp
src/Util/: ACF.cpp  ACF.h  ACFParser.cpp  ACFParser.h  Color.h  CompatShims.h  FixedSizeArray.h  Hashing.h  MD5Hash.cpp  MD5Hash.h  MakeDelegateWrapper.h  Matrices.h  Parsing.h  Quaternion.cpp  Quaternion.h  Rect.cpp  Rect.h  SString.cpp  SString.h  Sorting.h  StaticPImpl.h  Sync.h  UString.cpp  UString.h  Vectors.h  cbase.h  crypto.cpp  crypto.h  dynutils.cpp  dynutils.h  noinclude.h  templates.h  types.h
tools/diffcalc/: Makefile
tools/neosu.js/: Makefile  NeosuJs.cpp  test.mjs
(+193 files in other folders)
